# Titanite

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  next.config.ts  package-lock.json  package.json  test.js
Titanite-Research/docs/: CATALYST-TRACKER.md  TABLE.md  TITANITE-HOLDINGS.md  companies-to-research.md  workflow.md
Titanite-Research/titanite-app/: pyproject.toml
Titanite-Research/titanite-app/.cache/sec_edgar/: https__data_sec_gov_api_xbrl_companyfacts_CIK0001816581_json.json  https__data_sec_gov_api_xbrl_companyfacts_CIK0001828536_json.json  https__data_sec_gov_api_xbrl_companyfacts_CIK0001923891_json.json
Titanite-Research/titanite-app/src/titanite/: config.py
Titanite-Research/titanite-app/src/titanite/models/: portfolio.py
Titanite-Research/titanite-app/src/titanite/outputs/: __init__.py  buffer_writer.py  json_exporter.py
Titanite-Research/titanite-app/src/titanite/parsers/: holdings_parser.py  table_parser.py
Titanite-Research/titanite-app/tests/: test_extraction_buffer.py  test_table_parser.py
docs/: AI_CONTEXT.md  api_contracts.md  architecture.md  changelog.md  data_models.md  file_structure.md  overview.md  phases.md  prompt.md  roadmap.md  testplan.md
public/research-data/: catalysts.json  companies.json  holdings.json
research/docs/: TABLE.md
research/titanite-app/: README.md
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx  robots.ts
src/hooks/: useCongressTrades.ts  useHoldings.ts  useIntelFeed.ts  useMarketData.ts  useResearchCompanies.ts
src/store/: signalStore.ts  uiStore.ts  (+1 more)
(+110 files in other folders)
