[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "titanite"
version = "0.1.0"
description = "Titanite Research — Automated AI Infrastructure Research Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # HTTP & data fetching
    "httpx>=0.27.0",
    "httpx[http2]>=0.27.0",
    # Data validation — mirrors the SC-AI-EXTRACTOR JSON schema exactly
    "pydantic>=2.7.0",
    # CLI
    "typer>=0.12.0",
    # Beautiful terminal output
    "rich>=13.7.0",
    # Markdown/HTML parsing for transcript scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Date handling
    "python-dateutil>=2.9.0",
    # Environment/config
    "python-dotenv>=1.0.0",
]

[project.scripts]
titanite = "titanite.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/titanite"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
